--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "abc",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "inquirer": "^3.0.6"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ArumitaDe/Flashcard-Generator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/ArumitaDe/Flashcard-Generator/issues"
+  },
+  "homepage": "https://github.com/ArumitaDe/Flashcard-Generator#readme",
+  "description": ""
 }
